# uv-python-project

./: .gitignore  FIJI_SETUP_GUIDE.md  MOBIE_SETUP_GUIDE.md  N5_SUCCESS_REPORT.md  README.md  binary_file_analyzer.py  cheat-codes.md  create_bmcc1_surface_mesh.py  create_combined_enhanced_detail.py  create_combined_multi_channel.py  create_massive_scale_surface_mesh.py  create_surface_mesh_combined.py  create_surface_mesh_ultra_detail.py  create_tubulin_extreme_threshold.py  create_tubulin_low_threshold.py  create_tubulin_ultra_low_threshold.py  create_ultra_massive_scale_surface_mesh.py  embl_3d_renderer.py  embl_3d_visualizer.py  embl_complete_explorer.py  embl_enhanced_viewer.py  embl_final_visualizer.py  embl_path_discovery.py  enhanced_binary_analyzer.py  enhanced_download.py  example_usage.py  get-pip.py  index.html  launch_fiji.bat  launch_fiji_mobie.bat  main.py  metadata_analysis.py  openorganelle_explorer.ipynb  openorganelle_explorer_clean.ipynb  pyproject.toml  requirements.txt  specialized_image_detector.py  test_download.py  test_fiji_installation.bat  test_fix.py  (+4 more)
fiji_new/Fiji/: .checksums
fiji_new/Fiji/java/win64/zulu21.42.19-ca-jdk21.0.7-win_x64/: readme.txt  release
fiji_new/Fiji/java/win64/zulu21.42.19-ca-jdk21.0.7-win_x64/jmods/: com.azul.crs.client.jmod  com.azul.tooling.jmod  java.compiler.jmod  java.datatransfer.jmod  java.instrument.jmod  java.logging.jmod  java.management.jmod  java.management.rmi.jmod  java.naming.jmod  java.net.http.jmod  java.prefs.jmod  java.rmi.jmod  (+55 more)
fiji_new/db/: db.xml
src/: main.py  openorganelle_downloader.py
