[project]
name = "uv-python-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "boto3>=1.40.4",
    "dask>=2025.7.0",
    "fsspec[s3]>=2025.7.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "napari>=0.6.3",
    "numpy>=2.3.2",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "s3fs>=0.4.2",
    "scikit-image>=0.25.2",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
    "xarray>=2025.7.1",
    "zarr[complete]<3",
]
